--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
 	"scripts": {
-		"dev": " nodemon Backend/server.js",
-		"start": "  node Backend/server.js",
+		"dev": " nodemon Backend/Server.js",
+		"start": "  node Backend/Server.js",
 		"build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
 	},
 
